--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "hono": "^4.6.13"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@types/node": "^20.11.17",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.4.2",
-    "tsx": "^4.7.1"
+    "tsx": "^4.7.1",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.1"
   }
 }
