--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
-    "hono": "^4.6.13"
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.2",
+    "hono": "^4.6.13",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/node": "^20.11.17",
+    "@types/pg": "^8.11.10",
+    "drizzle-kit": "^0.30.1",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.4.2",
