--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "drizzle-orm": "^0.38.2",
     "hono": "^4.6.13",
     "pg": "^8.13.1",
+    "pino": "^9.5.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
